# nantrobot_main_robot_2026

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: behavior_tree_with_gpio_read.launch.py
lidar/lidar_pkg/: CMakeLists.txt  package.xml
lidar/lidar_pkg/launch/: lidar_launch.launch.xml
lidar/lidar_pkg/script/: lidar.py  lidar_extended.py
motor_control_pkg/: README.md  package.xml  setup.py
motor_control_pkg/action/: RobotTask.action
motor_control_pkg/arduino/: arduino_sim.py  motor_arduino.ino
motor_control_pkg/launch/: robot_launch.launch.py
motor_control_pkg/motor_control_pkg/: action_list.txt  action_logic.py  control_gateway.py  interface_node.py  interface_node2.py  motor_node.py  move.py  odom_node_sim.py
nantrobot_behavior_tree/: CMakeLists.txt  package.xml
nantrobot_behavior_tree/include/nantrobot_behavior_tree/: GotoAction.hpp  GpioReadAction.hpp  GpioWriteAction.hpp  InitOdomAction.hpp  MoveToAction.hpp  OrientationAction.hpp  PickAction.hpp  PutAction.hpp  SetTeamAction.hpp  StopAction.hpp
nantrobot_behavior_tree/include/nantrobot_main_robot_2026/: GpioReadAction.hpp
nantrobot_behavior_tree/launch/: behavior_tree_with_gpio_read.launch.py
nantrobot_behavior_tree/ressources/: action_nodes.xml  behavior_tree.xml  bt_project.btproj  test_project.btproj  test_tree.xml
nantrobot_behavior_tree/src/: behavior_tree.cpp
nantrobot_gpio/: package.xml  setup.cfg  setup.py
nantrobot_gpio/launch/: gpio_servers_auto.launch.py
nantrobot_gpio/nantrobot_gpio/: gpio_emulator_backend.py  gpio_emulator_backend_server.py  gpio_emulator_ui.py  gpio_read_action_server.py
nantrobot_interfaces/: CMakeLists.txt  package.xml
nantrobot_interfaces/action/: Goto.action  GpioRead.action  GpioWrite.action  Orientation.action  Pick.action  RobotMove.action  SetTeam.action  Stop.action
nantrobot_interfaces/srv/: SetString.srv
nantrobot_servers/: package.xml  setup.cfg  setup.py
nantrobot_servers/launch/: gpio_servers_auto.launch.py
nantrobot_servers/nantrobot_servers/: gpio_emulator_backend.py  gpio_read_action_server_emulator.py  gpio_write_action_server.py  gpio_write_action_server_emulator.py
ressources/: bt_project.btproj  my_tree.xml
src/: behavior_tree.cpp
srv/: gpio_read_action_server.py  gpio_write_action_server.py
