<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nantrobot_behavior_tree</name>
  <version>0.0.0</version>
  <description>Behavior tree for the Nantrobot main robot</description>
  <maintainer email="jbenoit.grimaldi+github@gmail.com">Jean-Benoît Grimaldi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <depend>behaviortree_cpp</depend>
  <depend>behaviortree_ros2</depend>

  <depend>nantrobot_interfaces</depend>
  <depend>nantrobot_gpio</depend>
  <depend>motor_control_pkg</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
